@@ -1,0 +1,7 @@
+// PR c++/26071
+// { dg-do compile }
+
+struct A
+{
+  virtual static ~A();  // { dg-error "virtual" }
+};
