@@ -1,5 +1,8 @@
 2006-02-08  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
+	PR c++/26071
+	* decl.c (grokdeclarator): Set dname also for destructor.
+
 	PR c++/26070
 	* decl.c (grokdeclarator): Clear storage_class together with staticp.
 
